fix style works overflow

--- a/scss/pages/realisation/_works.scss
+++ b/scss/pages/realisation/_works.scss
@@ -5,12 +5,13 @@
 .works {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   color: #fff;
+  overflow: hidden;
   .works-img {
     position: absolute;
     top: 0;
